--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,5 +1,9 @@
 ru:
   std:
     show: "Показать"
-    edit: "Редактировать"
+    edit: "Изменить"
     destroy: "Удалить"
+    cancel: "Отменить"
+    clone:  "Копировать"
+
+    back: "Назад"
