--- a/config/locales/views/orders.ru.yml
+++ b/config/locales/views/orders.ru.yml
@@ -7,4 +7,22 @@ ru:
       created: "Создан"
       user: "Владелец"
 
+    name: "Имя:"
+    status: "Статус:"
+
     new: "Новый заказ"
+    save: "Сохранить заказ"
+    start: "Начать"
+    id_device: "# уст-а"
+    contents: "Контент"
+    device: "Уст-о"
+    devices:  "Устройства"
+    period: "Период"
+    periods: "Периоды"
+    start_date: "Дата начала"
+    stop_date: "Дата завершения"
+    start_time: "Время начала"
+    stop_time: "Время завершения"
+    files: "Файлы"
+    clean_devices: "Очистить список устройств"
+    clean_files: "Очистить список файлов"
