--- a/config/locales/views/contents.ru.yml
+++ b/config/locales/views/contents.ru.yml
@@ -1,4 +1,15 @@
 ru:
   contents:
+    title: "Все категории контента"
     thead:
       title: "Заголовки разделов"
+    show:
+      title: "Заголовок:"
+      file: "Файл"
+      files: "Файлы"
+    new:
+      title: "Выберите фйлы"
+      upload: "Загрузить"
+    edit:
+      title: "Заголовок"
+      prompt: "Редактирование заголовка раздела"
