--- a/config/locales/views/devices.ru.yml
+++ b/config/locales/views/devices.ru.yml
@@ -5,8 +5,20 @@ ru:
       name: "Имя"
       market: "Магазин"
       ping: "Интервал ответа"
+      tzdate: "Часовой пояс"
+      sn: "СН"
       version: "Версия"
       updated: "Последний ответ"
       active: "Ативно"
+      comment: "Комментарий"
+      equalizer: "Эквалайзер"
+      description: "Описание"
+      volume: "Громкость"
 
-    new: "Новое Устройство"
+    description:
+      placeholder: "Мастер"
+    device: "Устройство"
+    volumes: "Настройки громкости"
+    new: "Новое устройство"
+    edit: "Редактрование опций устройста"
+    add_new_volume: "Добавить регулятор громкости"
