--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,6 +3,7 @@ ru:
     show: "Показать"
     edit: "Изменить"
     destroy: "Удалить"
+    add: "Добавить"
     cancel: "Отменить"
     clone:  "Копировать"
     save:   "Соханить"
