--- a/config/locales/views/tasks.ru.yml
+++ b/config/locales/views/tasks.ru.yml
@@ -5,4 +5,6 @@ ru:
       device: "Устройство"
       type: "Тип"
       status: "Статус"
-    new: "Новая Задача"
+    new: "Новая задача"
+    edit: "Редактирование задачи"
+    options: "Опции"
