i18n periods statuses typeofstatuses typeoftasks

--- a/config/locales/views/tasks.ru.yml
+++ b/config/locales/views/tasks.ru.yml
@@ -5,6 +5,20 @@ ru:
       device: "Устройство"
       type: "Тип"
       status: "Статус"
+
+      name: "Имя"
+      priority: "Приоритет"
+
     new: "Новая задача"
     edit: "Редактирование задачи"
     options: "Опции"
+
+    add_new_status: "Добавить статус задач"
+    title_status: "Список статусов задач"
+    new_status: "Новый статус"
+    edit_status: "Редактирование статуса"
+
+    add_new_type: "Добавить тип задач"
+    title_type: "Список топов задач"
+    new_type: "Новый тип"
+    edit_type: "Редактирование типа"
