search in contents/devices for orders

--- a/config/locales/views/contents.ru.yml
+++ b/config/locales/views/contents.ru.yml
@@ -7,6 +7,8 @@ ru:
       title: "Заголовок:"
       file: "Файл"
       files: "Файлы"
+      name: "Имя"
+      play: "Проиграть"
     new:
       title: "Выберите фйлы"
       upload: "Загрузить"
