--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -3,6 +3,7 @@ ru:
     devices:  "Устройства"
     orders:   "Заказы"
     tasks:    "Задачи"
+    messages: "Сообщения"
     contents: "Контент"
     bgvideos: "ФонВидео"
     bgmusics: "ФонМузыка"
