Fix clean spaces in setvol tags

--- a/config/locales/views/orders.ru.yml
+++ b/config/locales/views/orders.ru.yml
@@ -26,3 +26,5 @@ ru:
     files: "Файлы"
     clean_devices: "Очистить список устройств"
     clean_files: "Очистить список файлов"
+
+    search: "Найти"
