Add player on music in plsbgmusic

--- a/config/locales/views/devices.ru.yml
+++ b/config/locales/views/devices.ru.yml
@@ -22,3 +22,5 @@ ru:
     new: "Новое устройство"
     edit: "Редактрование опций устройста"
     add_new_volume: "Добавить регулятор громкости"
+
+    few: "Устройства"
