--- a/config/locales/views/pls.ru.yml
+++ b/config/locales/views/pls.ru.yml
@@ -5,6 +5,7 @@ ru:
     v_title: "Список фоновых видео плейлистов"
     m_title: "Список фоновых музыкальных плейлистов"
     i_title: "Список фоновых наборов изображений"
+    title: "Название"
 
     name: "Имя"
     devices: "Устройства"
