--- a/config/locales/views/contents.ru.yml
+++ b/config/locales/views/contents.ru.yml
@@ -6,6 +6,7 @@ ru:
     show:
       title: "Заголовок:"
       file: "Файл"
+      files: "Файлы"
       link: "Ссылка"
       md5: "Md5"
       files: "Файлы"
