Add playlist scaffold + changes for gtw

--- a/config/locales/views/en.yml
+++ b/config/locales/views/en.yml
@@ -4,6 +4,7 @@ en:
     orders: "Orders"
     tasks:  "Tasks"
     contents: "Contents"
+    playlists: "Playlists"
     bgvideos: "BgVideos"
     bgmusics: "BgMusics"
     bgimages: "BgImages"
