--- a/config/locales/views/ru.yml
+++ b/config/locales/views/ru.yml
@@ -5,6 +5,7 @@ ru:
     tasks:    "Задачи"
     messages: "Сообщения"
     contents: "Контент"
+    playlists: "Плейлисты"
     bgvideos: "ФонВидео"
     bgmusics: "ФонМузыка"
     bgimages: "ФонИзображение"
