--- a/config/locales/views/pls.ru.yml
+++ b/config/locales/views/pls.ru.yml
@@ -19,3 +19,11 @@ ru:
 
     video:
       new: "Новый видео-плейлист"
+    day0: "Воскресенье"
+    day1: "Понедельник"
+    day2: "Вторник"
+    day3: "Среда"
+    day4: "Четверг"
+    day5: "Пятница"
+    day6: "Суббота"
+
