Add locale in orders and message

--- a/config/locales/views/orders.ru.yml
+++ b/config/locales/views/orders.ru.yml
@@ -28,3 +28,8 @@ ru:
     clean_files: "Очистить список файлов"
 
     search: "Найти"
+
+    creat: "Заказ успешно создан"
+    canceled: "Заказ отменен"
+    update: "Заказ обновлен"
+    deleted: "Заказ удален"
