--- a/config/locales/views/devices.ru.yml
+++ b/config/locales/views/devices.ru.yml
@@ -24,3 +24,23 @@ ru:
     add_new_volume: "Добавить регулятор громкости"
 
     few: "Устройства"
+
+      okping: "В доступе"
+      badping: "Не в доступе"
+      setvol: "Установка громкости"
+      sync_time: "Синхронизация времени"
+      ping: "Установка интервала"
+      equalizer: "Установка параметров эквалайзера"
+      reboot: "Перезагрузка"
+      getvr: "Запрос версии"
+      getinfo: "Запрос информации"
+      gettrack: "Что cейчас играет"
+      setweight: "Установка веса"
+      sendbgpls: "Запрос фоновой музыки"
+      sendadpls: "Запрос рекламы"
+      volsofday: "Установка почасовой громкости"
+      worktime: "Установка времени вещания"
+      update: "Обновление ПО"
+      delall: "Удаление всех заказов"
+      cancelall: "Отмена всех задача"
+      ssgit h: "Установка SSH"
