add locale рефакторинг device yml, переместил в подуровень title, что относится к кнопкам

--- a/config/locales/views/devices.ru.yml
+++ b/config/locales/views/devices.ru.yml
@@ -25,6 +25,7 @@ ru:
 
     few: "Устройства"
 
+    title:
       okping: "В доступе"
       badping: "Не в доступе"
       setvol: "Установка громкости"
@@ -43,4 +44,4 @@ ru:
       update: "Обновление ПО"
       delall: "Удаление всех заказов"
       cancelall: "Отмена всех задача"
-      ssgit h: "Установка SSH"
+      ssh: "Установка SSH"
