Добавил поиск в вкладке 'сообщение' Добавил локали для плейлистов

--- a/config/locales/views/tasks.ru.yml
+++ b/config/locales/views/tasks.ru.yml
@@ -5,6 +5,8 @@ ru:
       device: "Устройство"
       type: "Тип"
       status: "Статус"
+      created: "Создана"
+      complited: "Выполнена"
 
       name: "Имя"
       priority: "Приоритет"
