--- a/config/locales/views/pls.ru.yml
+++ b/config/locales/views/pls.ru.yml
@@ -2,14 +2,17 @@ ru:
   pls:
     new: "Новый плейлист"
     i_new: "Новый набор"
+    a_title: "Список плейлистов"
     v_title: "Список фоновых видео плейлистов"
     m_title: "Список фоновых музыкальных плейлистов"
     i_title: "Список фоновых наборов изображений"
     title: "Название"
 
+    task: "Задача"
     name: "Имя"
     devices: "Устройства"
     files: "Файлы"
+    date: "Дата"
 
     img:
       new: "Новый набор изображений"
