--- a/config/locales/views/orders.ru.yml
+++ b/config/locales/views/orders.ru.yml
@@ -10,6 +10,8 @@ ru:
     name: "Имя:"
     status: "Статус:"
 
+    confirm_cancel: "Вы уверены, что хотите отменить заказ?"
+
     new: "Новый заказ"
     save: "Сохранить заказ"
     start: "Начать"
