swap days for works time

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,4 +15,4 @@ ru:
 
     empty: "Отсутствует"
 
-  SUNMONTUEWEDTHUFRISAT: "ВосПонВтоСреЧетПятСуб"
+  SUNMONTUEWEDTHUFRISAT: "ПонВтоСреЧетПятСубВос"
